--- a/src/DocBundle/Resources/public/css/style.css
+++ b/src/DocBundle/Resources/public/css/style.css
@@ -71,15 +71,29 @@ footer {
     position: absolute;
     top: 10%;
     right: 25%;
-    font-size: 10px;
+    font-size: 8px;
     font-weight: normal;
     background: rgba(41,200,41,0.75);
-    color: rgb(255,255,255);
+    color: #FFFFFF;
     line-height: 1em;
-    padding: 2px 4px;
+    padding: 2px 2px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     border-radius: 10px;
+}
+
+
+.panel-success > .panel-heading {
+    background-image: none;
+    background-color: #00857E;
+    color: white;
+
+}
+.panel-primary > .panel-heading {
+    background-image: none;
+    background-color: #002364;
+    color: white;
+
 }
