--- a/src/DocBundle/Resources/views/Default/index.html.twig
+++ b/src/DocBundle/Resources/views/Default/index.html.twig
@@ -5,26 +5,36 @@
 {% endblock %}
 
 {% block body %}
-   <h3><i class="glyphicon glyphicon-home"></i> Accueil de l'application</h3>
-   <hr>
-   <div class="well">
-      <form class="form-horizontal" method="get" action="" id="selectReseau">
-         <div class="form-group">
-            <label class="col-sm-3 control-label required" for="reseau">Réseau</label>
-            <div class="col-sm-4">
-               <select class="form-control" id="reseau">
-                  <option value="" disabled selected>Choisir le réseau</option>
-                  {% for reseau in reseaus %}
-                     <option value="{{ reseau.id }}">{{ reseau.name }}</option>
-                  {% endfor %}
-               </select>
-               <!--<button type="submit" class="glyphicon glyphicon-ok btn btn-primary">Choisir</button>-->
+
+   <div class="row">
+        <div class="col-sm-12">
+            <div class = "panel panel-success">
+               <div class = "panel-heading">
+                        <h3 class = "panel-title">
+                           <i class="glyphicon glyphicon-home"></i> Choisissez un réseau pour continuer
+                        </h3>
+               </div>
+               <div class = "panel-body">
+                  <div class="well">
+                     <form class="form-horizontal" method="get" action="" id="selectReseau">
+                        <div class="form-group">
+                           <label class="col-sm-3 control-label required" for="reseau">Réseau</label>
+                           <div class="col-sm-4">
+                              <select class="form-control" id="reseau">
+                                 <option value="" disabled selected>Choisir le réseau</option>
+                                 {% for reseau in reseaus %}
+                                    <option value="{{ reseau.id }}">{{ reseau.name }}</option>
+                                 {% endfor %}
+                              </select>
+                              <!--<button type="submit" class="glyphicon glyphicon-ok btn btn-primary">Choisir</button>-->
+                           </div>
+                        </div>
+                     </form>
+                  </div>
+               </div>
             </div>
-         </div>
-      </form>
-
+        </div>
    </div>
-
 
 {% endblock %}
 
