--- a/src/DocBundle/Resources/views/parametrage/csv_form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/csv_form.html.twig
@@ -1,45 +1,57 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Import du fichier CSV</h1>
-    <div class="well">
-        {{ form_start(form, {'attr': {'class': 'form-horizontal csvform', 'id': 'csvform'}}) }}
-        {{ form_errors(form) }}
-
-        <div class="form-group">
-            {{ form_label(form.submitFile, "Fichier (CSV)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-            {{ form_errors(form.submitFile) }}
-            <div class="col-sm-4">
-                {{ form_widget(form.submitFile, {'attr': {'class': 'form-control'}}) }}
+<div class="row">
+    <div class="col-sm-12">
+        <div class = "panel panel-success">
+            <div class = "panel-heading">
+                <h3 class = "panel-title">
+                    <i class="glyphicon glyphicon-file"></i> Import du fichier CSV
+                </h3>
             </div>
-        </div>
+            <div class = "panel-body">
+                <div class="well">
+                    {{ form_start(form, {'attr': {'class': 'form-horizontal csvform', 'id': 'csvform'}}) }}
+                    {{ form_errors(form) }}
 
-        <div class="modal fade" id="myModal" role="dialog" >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Statut du chargement</h4>
+                    <div class="form-group">
+                        {{ form_label(form.submitFile, "Fichier (CSV)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                        {{ form_errors(form.submitFile) }}
+                        <div class="col-sm-4">
+                            {{ form_widget(form.submitFile, {'attr': {'class': 'form-control'}}) }}
+                        </div>
                     </div>
-                    <div class="modal-body">
-                        <p id="requestStatus">Import du fichier en cours.</p>
-                        {% image '@DocBundle/Resources/public/images/default.svg' %}
-                        <img src="{{ asset_url }}" alt="loader" />
-                        {% endimage %}
+
+                    <div class="modal fade" id="myModal" role="dialog" >
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Statut du chargement</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <p id="requestStatus">Import du fichier en cours.</p>
+                                    {% image '@DocBundle/Resources/public/images/default.svg' %}
+                                    <img src="{{ asset_url }}" alt="loader" />
+                                    {% endimage %}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-                    </div>
+
+                    {{ form_rest(form) }}
+                    <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">Importer</button>
+
+                    {{ form_end(form) }}
                 </div>
-
             </div>
         </div>
-
-        {{ form_rest(form) }}
-        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">Importer</button>
-
-        {{ form_end(form) }}
     </div>
+</div>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
