--- a/src/DocBundle/Resources/views/parametrage/edit.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/edit.html.twig
@@ -1,28 +1,37 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h3><i class="glyphicon glyphicon-th-list"></i> Modification d'un paramètre</h3>
-    <hr>
-    {% if confirmation is defined %}
-        <div class="alert alert-success">
-            <strong>Success!</strong> Le paramètre a été modifié avec succès.
+<div class="row">
+    <div class="col-sm-12">
+        <div class = "panel panel-success">
+            <div class = "panel-heading">
+                <h3 class = "panel-title">
+                    <i class="glyphicon glyphicon-th-list"></i> Modification d'un paramètre
+                </h3>
+            </div>
+            <div class = "panel-body">
+                {% if confirmation is defined %}
+                    <div class="alert alert-success">
+                        <strong>Success!</strong> Le paramètre a été modifié avec succès.
+                    </div>
+                {% endif %}
+                <div class="well">
+                    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+                    {{ include("DocBundle:parametrage:form.html.twig") }}
+                    <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Modifier</button>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+            <div class="panel-footer">
+                <a href="{{ path('parametrage_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+                <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
+                    <button type="button" class="btn btn-danger">Supprimer</button>
+                </a>
+                <!--{{ form_start(delete_form) }}
+                <button type="button" class="btn btn-danger">Supprimer</button>
+                {{ form_end(delete_form) }}-->
+            </div>
         </div>
-    {% endif %}
-    <div class="well">
-        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-
-        {{ include("DocBundle:parametrage:form.html.twig") }}
-        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Modifier</button>
-
-        {{ form_end(form) }}
     </div>
-
-    <a href="{{ path('parametrage_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
-    <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
-        <button type="button" class="btn btn-danger">Supprimer</button>
-    </a>
-    <!--{{ form_start(delete_form) }}
-    <button type="button" class="btn btn-danger">Supprimer</button>
-    {{ form_end(delete_form) }}-->
-
+</div>
 {% endblock %}
