--- a/src/DocBundle/Resources/views/parametrage/new.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/new.html.twig
@@ -2,23 +2,30 @@
 
 {% block body %}
     <div class="row">
-        <h3><i class="glyphicon glyphicon-th-list"></i> Création d'un paramètrage</h3>
-        <hr>
-        <div class="well">
-            {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+        <div class="col-sm-12">
+            <div class = "panel panel-success">
+                <div class = "panel-heading">
+                    <h3 class = "panel-title">
+                        <i class="glyphicon glyphicon-th-list"></i> Modification d'un paramètre
+                    </h3>
+                </div>
+                <div class = "panel-body">
+                    <div class="well">
+                        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-            {{ include("DocBundle:parametrage:form.html.twig") }}
-            <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Créer</button>
-            <button type="reset" class="btn btn-default btn-md">Annuler</button>
+                        {{ include("DocBundle:parametrage:form.html.twig") }}
+                        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Créer</button>
+                        <button type="reset" class="btn btn-default btn-md">Annuler</button>
 
-            {{ form_end(form) }}
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <a href="{{ path('parametrage_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+                </div>
+            </div>
         </div>
     </div>
-    <ul>
-        <li>
-            <a href="{{ path('parametrage_index') }}">Retour à la liste</a>
-        </li>
-    </ul>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
