--- a/src/DocBundle/Resources/views/reseau/edit.html.twig
+++ b/src/DocBundle/Resources/views/reseau/edit.html.twig
@@ -1,26 +1,38 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Modification d'un paramètre</h1>
-    {% if confirmation is defined %}
-        <div class="alert alert-success">
-            <strong>Success!</strong> Le paramètre a été modifié avec succès.
+    <div class="row">
+        <div class="col-sm-12">
+            <div class = "panel panel-success">
+                <div class = "panel-heading">
+                    <h3 class = "panel-title">
+                        <i class="glyphicon glyphicon-th-list"></i> Modification d'un réseau
+                    </h3>
+                </div>
+                <div class = "panel-body">
+                    {% if confirmation is defined %}
+                        <div class="alert alert-success">
+                            <strong>Success!</strong> Le paramètre a été modifié avec succès.
+                        </div>
+                    {% endif %}
+                    <div class="well">
+                        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+
+                        {{ include("DocBundle:reseau:form.html.twig") }}
+                        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Modifier</button>
+
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+                    <a href="{{ path('reseau_delete', {'id': reseau.id}) }}"><button type="button" class="btn btn-danger">Supprimer</button></a>
+
+                    <!--{{ form_start(delete_form) }}
+                    <button type="submit" class="btn btn-danger">Supprimer</button>
+                    {{ form_end(delete_form) }}-->
+                </div>
+            </div>
         </div>
-    {% endif %}
-    <div class="well">
-        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-
-        {{ include("DocBundle:reseau:form.html.twig") }}
-        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Modifier</button>
-
-        {{ form_end(form) }}
     </div>
-
-    <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
-    <a href="{{ path('reseau_delete', {'id': reseau.id}) }}"><button type="button" class="btn btn-danger">Supprimer</button></a>
-
-    <!--{{ form_start(delete_form) }}
-    <button type="submit" class="btn btn-danger">Supprimer</button>
-    {{ form_end(delete_form) }}-->
-
 {% endblock %}
