--- a/src/DocBundle/Resources/views/reseau/new.html.twig
+++ b/src/DocBundle/Resources/views/reseau/new.html.twig
@@ -1,23 +1,31 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <div class="row">
-        <h3><i class="glyphicon glyphicon-th-list"></i> Création d'un réseau</h3>
-        <hr>
-        <div class="panel panel-default">
+<div class="row">
+    <div class="col-sm-12">
+        <div class = "panel panel-success">
+            <div class = "panel-heading">
+                <h3 class = "panel-title">
+                    <i class="glyphicon glyphicon-th-list"></i> Création d'un réseau
+                </h3>
+            </div>
+            <div class = "panel-body">
+                <div class="well">
+                    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+                    {{ include("DocBundle:reseau:form.html.twig") }}
+                    <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Créer</button>
+                    <button type="reset" class="btn btn-default btn-md">Annuler</button>
 
-            <div class="panel-body">
-                {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-
-                {{ include("DocBundle:reseau:form.html.twig") }}
-                <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Créer</button>
-                <button type="reset" class="btn btn-default btn-md">Annuler</button>
-
-                {{ form_end(form) }}
+                    {{ form_end(form) }}
+                </div>
+            </div>
+            <div class="panel-footer">
+                <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
             </div>
         </div>
     </div>
+</div>
 
-    <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+
 
 {% endblock %}
