--- a/src/DocBundle/Resources/views/reseau/show.html.twig
+++ b/src/DocBundle/Resources/views/reseau/show.html.twig
@@ -1,33 +1,47 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h3><i class="glyphicon glyphicon-th-list"></i> Réseau</h3>
-    <hr>
-    <table class="table table-striped table-responsive table-bordered">
-        <tbody>
-            <!--<tr>
-                <th>Id</th>
-                <td>{{ reseau.id }}</td>
-            </tr>-->
-            <tr>
-                <th>Code</th>
-                <td>{{ reseau.code }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ reseau.name }}</td>
-            </tr>
-        </tbody>
-    </table>
-    <a href="{{ path('reseau_edit', { 'id': reseau.id }) }}">
-        <button type="button" class="btn btn-primary">Modifier</button>
-    </a>
+<div class="row">
+    <div class="col-sm-12">
+        <div class = "panel panel-success">
+            <div class = "panel-heading">
+                <h3 class = "panel-title">
+                    <i class="glyphicon glyphicon-th-list"></i> Création d'un réseau
+                </h3>
+            </div>
+            <div class = "panel-body">
+                <div class="well">
+                    <table class="table table-striped table-responsive table-bordered">
+                        <tbody>
+                            <!--<tr>
+                                <th>Id</th>
+                                <td>{{ reseau.id }}</td>
+                            </tr>-->
+                            <tr>
+                                <th>Code</th>
+                                <td>{{ reseau.code }}</td>
+                            </tr>
+                            <tr>
+                                <th>Name</th>
+                                <td>{{ reseau.name }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="panel-footer">
+                <a href="{{ path('reseau_edit', { 'id': reseau.id }) }}">
+                    <button type="button" class="btn btn-primary">Modifier</button>
+                </a>
 
-    <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
-    <a href="{{ path('reseau_delete', {'id': reseau.id}) }}"><button type="button" class="btn btn-danger">Supprimer</button></a>
+                <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+                <a href="{{ path('reseau_delete', {'id': reseau.id}) }}"><button type="button" class="btn btn-danger">Supprimer</button></a>
 
-    <!--{{ form_start(delete_form) }}
-    <button type="submit" class="btn btn-danger">Supprimer</button>
-    {{ form_end(delete_form) }}-->
-
+                <!--{{ form_start(delete_form) }}
+                <button type="submit" class="btn btn-danger">Supprimer</button>
+                {{ form_end(delete_form) }}-->
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
