--- a/src/DocBundle/Resources/views/version/version_params.html.twig
+++ b/src/DocBundle/Resources/views/version/version_params.html.twig
@@ -4,17 +4,35 @@
 {% endblock %}
 
 {% block body %}
-    <div class="row">
-        {% if  parametrages is empty %}
-            <h3><i class="glyphicon glyphicon-th-list"></i> Aucun paramétrage n'a été archivé pour le réseau {{ reseau.name }}</h3>
-        {% else %}
-            <h3><i class="glyphicon glyphicon-th-list"></i> La liste des paramètrages de {{ reseau.name }} (historique)
-                <span class="label label-default">V{{ version.numero }} {{ version.enCours ? 'En cours...' : '' }}</span>
-            </h3>
-            <hr>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
+<div class="row">
+    <div class="col-sm-12">
+        <div class = "panel panel-success">
+            {% if  parametrages is empty %}
+                <div class = "panel-heading">
+                    <h3 class = "panel-title">
+                        <i class="glyphicon glyphicon-th-list"></i> Aucun paramétrage n'a été archivé pour le réseau {{ reseau.name }}
+                    </h3>
+                </div>
+                <div class = "panel-body">
+                </div>
+            {% else %}
+                <div class = "panel-heading">
+                    <h3 class = "panel-title">
+                        <i class="glyphicon glyphicon-th-list"></i> La liste des paramètrages de {{ reseau.name }} (historique)
+                        <span class="label label-default">V{{ version.numero }} {{ version.enCours ? 'En cours...' : '' }}</span>
+
+                        <button type="button" class="btn btn-warning pull-right patch-button">Patcher</button>
+                    </h3>
+                </div>
+                <div class = "panel-body">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="label-warning hide patch">
+                                <h4><strong>Attentioin :</strong>Ces changements ne seront pas reportés dans le paramétrage en cours du réseau.</h4>
+                            </div>
+                        </div>
+                    </div>
+
                     <table class="table table-striped table-condensed responsive no-wrap table-bordered table-hover" id="source">
                         <thead>
                         <tr>
@@ -26,7 +44,7 @@
                             <th>Type</th>
                             <th>Reference</th>
                             <th>Pdf</th>
-                            <!--<th>Actions</th>-->
+                            <th class="hide patch">Actions</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -42,7 +60,7 @@
                                 <td>{{ parametrage.type }}</td>
                                 <td>{{ parametrage.reference }}</td>
                                 <td><a href="{{ path('parametrage_show_archive_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
-                                <!--<td>
+                                <td class="hide patch">
                                     <ul>
                                         <li>
                                             <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
@@ -55,74 +73,78 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </td>-->
+                                </td>
                             </tr>
                         {% endfor %}
                         </tbody>
                     </table>
-                    <div class="modal fade" id="myModal" role="dialog" >
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Statut de la génération</h4>
-                                </div>
-                                {{ form_start(form, {'attr': {'id': 'generateForm', 'class': 'form-horizontal'}}) }}
-                                    <div class="modal-body">
-                                        <!--<p id="requestStatus">Génération en cours.</p>
-                                        {% image '@DocBundle/Resources/public/images/default.svg' %}
-                                        <img src="{{ asset_url }}" alt="loader" />
-                                        {% endimage %}-->
-                                            <div class="form-group">
-                                                {{ form_label(form.numero, "N° Version", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-                                                {{ form_errors(form.numero) }}
-                                                <div class="col-sm-4">
-                                                    {{ form_widget(form.numero, {'attr': {'class': 'form-control checkbox-all', 'required':'required'}}) }}
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                {{ form_label(form.message, "Description", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-                                                {{ form_errors(form.message) }}
-                                                <div class="col-sm-4">
-                                                    {{ form_widget(form.message, {'attr': {'class': 'form-control', 'required':'required'}}) }}
-                                                </div>
-                                            </div>
-
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="submit" class="btn btn-primary">Générer</button>
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-                                    </div>
-                                {{ form_end(form) }}
-                            </div>
-
-                        </div>
-                    </div>
-
                 </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-sm-12">
+                <div class="panel-footer">
                     <button type="button" class="btn btn-primary inline" data-toggle="modal" data-target="#myModal">
                         <i class="glyphicon glyphicon-cog"></i> Générer
                     </button>
                     {{ form_start(exportForm, {'attr': {'class': 'form-inline pull-right', 'id': 'generateForm', 'style':'display:inline-block'}}) }}
-                        <button type="submit" class="btn btn-info inline">
-                            <i class="glyphicon glyphicon-download"></i> Exporter en CSV
-                        </button>
+                    <button type="submit" class="btn btn-info inline">
+                        <i class="glyphicon glyphicon-download"></i> Exporter en CSV
+                    </button>
                     {{ form_end(exportForm) }}
                 </div>
             </div>
-        {% endif %}
+        </div>
+    </div>
+
+            {% endif %}
+    <div class="modal fade" id="myModal" role="dialog" >
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Statut de la génération</h4>
+                        </div>
+                        {{ form_start(form, {'attr': {'id': 'generateForm', 'class': 'form-horizontal'}}) }}
+                            <div class="modal-body">
+                                <!--<p id="requestStatus">Génération en cours.</p>
+                                {% image '@DocBundle/Resources/public/images/default.svg' %}
+                                <img src="{{ asset_url }}" alt="loader" />
+                                {% endimage %}-->
+                                    <div class="form-group">
+                                        {{ form_label(form.numero, "N° Version", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                                        {{ form_errors(form.numero) }}
+                                        <div class="col-sm-4">
+                                            {{ form_widget(form.numero, {'attr': {'class': 'form-control checkbox-all', 'required':'required'}}) }}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form_label(form.message, "Description", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                                        {{ form_errors(form.message) }}
+                                        <div class="col-sm-4">
+                                            {{ form_widget(form.message, {'attr': {'class': 'form-control', 'required':'required'}}) }}
+                                        </div>
+                                    </div>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary">Générer</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                            </div>
+                        {{ form_end(form) }}
+                    </div>
+
+                </div>
+            </div>
 
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+
     <script type="application/javascript">
         $(document).ready(function() {
             //synchroneRequest('#generateForm');
+
+            $('.patch-button').on('click', function(){
+                $('.patch').removeClass('hide');
+            })
         });
     </script>
 {% endblock %}
